Replace getFirst and Last with get(0)&(1)